#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this irogram.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-09-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999903 released.

        * Fixed login with /dev/tty: No such device or address

        
2014-09-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999902 released.

        * Can now connect to amazon servers from Cygwin FullAuto
          installations.

        * Fixed Full Calendar when saving passwords.

        * Added warning against the use of commandline passwords.


2014-08-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999901 released.

        * Added Makefile.PL code to check and install
          openssl-devel.


2014-08-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999999 released.

        * Fixes for Gentoo.

        * New version of Term::Menus paired with this release.


2014-07-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999999_002 released.

        * Fixes for CentOS.


2014-07-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999999_001 released.

        * Fixes for CentOS.


2014-07-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999998 released.

        * Fixes for CentOS.


2014-07-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999997 released.

        * Fixes for CentOS.

        * New version of Term::RawInput paired with this release.


2014-07-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999996 released.
