@@ -100,7 +100,7 @@ IT REALLY IS THAT EASY!
 
 Commands also are easy:
 
-($stdout,$stderr)=$computer_one->cmd('ls -l');
+($stdout,$stderr,$returncode)=$computer_one->cmd('ls -l');
 
 And NO CLEANUP is necessary - FullAuto handles this AUTOMATICALLY.
 
@@ -108,7 +108,10 @@ This is a COMPLETE *routine* or *process*:
 
 sub ls_one {
 
-   my ($computer_one,$stdout,$stderr);             # Scope Variables   $computer_one=connect_ssh('COMPUTER_ONE');      # Connect to Remote Host   ($stdout,$stderr)=$computer_one->cmd('ls -l');  # Run Command   if ($stderr) {                                  # Check Results
+   my ($computer_one,$stdout,$stderr,$returncode); # Scope Variables
+   $computer_one=connect_ssh('COMPUTER_ONE');      # Connect to Remote Host
+   ($stdout,$stderr,$returncode)=$computer_one->cmd('ls -l');  # Run Command
+   if ($stderr) {                                  # Check Results
       print "We Have and ERROR! : $stderr\n";
    } else {
       print "Output of ls command from Computer One:\n\n$stdout\n\n";
@@ -124,8 +127,11 @@ For added security, and enhanced user functionality, FullAuto can be installed o
 Reasons to use this module are:
 
 You want the output of the ps -e command from a remote UNIX computer. Example: 
+
    In the file "fa_hosts.pm" add the connection information for
-   the remote computer (This will suffice for all following examples):       {
+   the remote computer (This will suffice for all following examples):
+
+       {
           'Label'         => 'COMPUTER_ONE',
           'IP'            => '10.200.210.37',
           'HostName'      => 'compter_one.w2k.fullautosoftware.net',
@@ -133,28 +139,53 @@ You want the output of the ps -e command from a remote UNIX computer. Example:
           'LogFile'       => "/cygdrive/d/fullauto/logs/FAlog${$}d".
                              "${FA_Core::invoked[2]}".
                              "${FA_Core::invoked[3]}.txt",
-       },   In the file "usr_code.pm" add the *process* subroutine code:       sub ps_one {          my ($computer_one,$stdout,$stderr);        # Scope Variables          $computer_one=connect_ssh('COMPUTER_ONE'); # Connect to
+       },
+
+   In the file "usr_code.pm" add the *process* subroutine code:
+
+       sub ps_one {
+
+          my ($computer_one,$stdout,$stderr,$returncode); # Scope Variables
+          $computer_one=connect_ssh('COMPUTER_ONE'); # Connect to
                                                      # Remote Host via
-                                                     # ssh only          ($stdout,$stderr)=$computer_one->cmd('ps -e'); # Run Command          if ($stderr) {                             # Check Results
+                                                     # ssh only
+          ($stdout,$stderr,$returncode)=
+             $computer_one->cmd('ps -e');            # Run Command
+          if ($stderr) {                             # Check Results
              print "We Have and ERROR! : $stderr\n";
           } else {
              print "Output of ps -e command from Computer One:".
                    "\n\n$stdout\n\n";
-          }       }Run FullAuto: (Hint: the --< # >-- line are instructions and are not displayed when the program actually runs)
+          }
+       }
+
+   Run FullAuto: (Hint: the --< # >-- line are instructions and are not
+                  displayed when the program actually runs)
 
 --< 1 >-<Type Command and <ENTER> >---------------------------
 
-       fullauto.pl --usr_code ps_one--< The user sees: >------------------------------------------
+       fullauto.pl --usr_code ps_one
+
+--< The user sees: >------------------------------------------
 
 STARTING FULLAUTO on Wed Jun 6 12:27:08 2007
 
-  Starting fullauto.pl . . .  Running in TEST mode  computer_one Login <bkelly> :--< 2 >-<ENTER>-(Hint: since 'Login' was specified in fa_hosts.pm 'bkelly' appears as the default)-
+  Starting fullauto.pl . . .
+  Running in TEST mode
+
+  computer_one Login <bkelly> :
+
+--< 2 >-<ENTER>-(Hint: since 'Login' was specified in fa_hosts.pm 'bkelly' appears as the default)-
 
   Password:--< 3 >-<Type Password and <ENTER> >--------------------------
 
 --> Logging into localhost via ssh . . .
 
-        Logging into computer_one.w2k.fullautosoftware.net via ssh  . . . Output of ps -e command from Computer One:   PID TTY          TIME CMD
+        Logging into computer_one.w2k.fullautosoftware.net via ssh  . . .
+
+  Output of ps -e command from Computer One:
+
+   PID TTY          TIME CMD
      1 ?        00:00:03 init
      2 ?        00:00:00 migration/0
      3 ?        00:00:00 ksoftirqd/0
@@ -188,37 +219,70 @@ STARTING FULLAUTO on Wed Jun 6 12:27:08 2007
    563 ?        00:00:00 sshd
    564 pts/30   00:00:00 bash
    641 pts/30   00:00:00 ps
-   642 pts/30   00:00:00 sed FULLAUTO COMPLETED SUCCESSFULLY on Wed Jun  6 12:28:30 2007
-You want to zip and transfer a remote file from COMPUTER_ONE to your local computer and then unzip it: 
-   In the file "usr_code.pm" add the *process* subroutine code:       sub get_file_from_one {          my ($computer_one,$stdout,$stderr);         # Scope Variables          $computer_one=connect_host('COMPUTER_ONE'); # Connect to
+   642 pts/30   00:00:00 sed
+
+FULLAUTO COMPLETED SUCCESSFULLY on Wed Jun  6 12:28:30 2007
+
+You want to zip and transfer a remote file from COMPUTER_ONE to your
+local computer and then unzip it: 
+
+   In the file "usr_code.pm" add the *process* subroutine code:
+
+       sub get_file_from_one {          
+
+          my ($computer_one,$stdout,$stderr,$returncode); # Scope Variables
+          $computer_one=connect_host('COMPUTER_ONE'); # Connect to
                                                       # Remote Host via
-                                                      # ssh *and* sftp          ($stdout,$stderr)=$computer_one->cmd(
-                            'echo test > test.txt');  # Run Remote Command          ($stdout,$stderr)=$computer_one->cmd(
-                            'zip test test.txt');     # Run Remote Command          if ($stderr) {                              # Check Results
+                                                      # ssh *and* sftp
+          ($stdout,$stderr,$returncode)=$computer_one->cmd(
+                            'echo test > test.txt');  # Run Remote Command
+          ($stdout,$stderr,$returncode)=$computer_one->cmd(
+                            'zip test test.txt');     # Run Remote Command
+          if ($stderr) {                              # Check Results
              print "We Have and ERROR! : $stderr\n";
           } else {
              print "Output of zip command from Computer One:".
                    "\n\n$stdout\n\n";
-          }          ($stdout,$stderr)=$computer_one->get(
-                            'test.zip');              # Get the File          if ($stderr) {                              # Check Results
+          }
+          ($stdout,$stderr)=$computer_one->get('test.zip'); # Get the File
+          if ($stderr) {                              # Check Results
              print "We Have and ERROR! : $stderr\n";
           } else {
              print "Output of zip command from Computer One:".
                    "\n\n$stdout\n\n";
-          }          ($stdout,$stderr)=$localhost->cmd(
-                            'unzip test.zip');        # Run Local Command       }Run FullAuto: (Hint: the --< # >-- line are instructions and are not displayed when the program actually runs)
+          }
+          ($stdout,$stderr)=$localhost->cmd(
+                            'unzip test.zip'); # Run Local Command
+       }
+
+       Run FullAuto: (Hint: the --< # >-- line are instructions and are not displayed when the program actually runs)
 
 --< 1 >-<Type Command and <ENTER> >---------------------------
 
-       fullauto.pl --usr_code get_file_from_one--< The user sees: >------------------------------------------
+       fullauto.pl --usr_code get_file_from_one
+
+--< The user sees: >------------------------------------------
 
 STARTING FULLAUTO on Wed Jun 6 12:27:08 2007
 
-  Starting fullauto.pl . . .  Running in TEST mode  computer_one Login <bkelly> :--< 2 >-<ENTER>-(Hint: since 'Login' was specified in fa_hosts.pm 'bkelly' appears as the default)-
+  Starting fullauto.pl . . .
+  Running in TEST mode  computer_one Login <bkelly> :
+
+--< 2 >-<ENTER>-(Hint: since 'Login' was specified in fa_hosts.pm 'bkelly' appears as the default)-
 
   Password:--< 3 >-<Type Password and <ENTER> >--------------------------
 
- --> Logging into localhost via ssh  . . .        Logging into localhost via ssh  . . .        Logging into computer_one.w2k.fullautosoftware.net via sftp  . . .        Logging into computer_one.w2k.fullautosoftware.net via ssh  . . . Output of zip command from Computer One: updating: test.txt (stored 0%) get "/tmp/test.zip" Fetching /tmp/test.zip to test.zip
+ --> Logging into localhost via ssh  . . .
+
+        Logging into localhost via ssh  . . .
+
+        Logging into computer_one.w2k.fullautosoftware.net via sftp  . . .
+
+        Logging into computer_one.w2k.fullautosoftware.net via ssh  . . .
+
+ Output of zip command from Computer One:
+
+ updating: test.txt (stored 0%) get "/tmp/test.zip" Fetching /tmp/test.zip to test.zip
  /tmp/test.zip                                   0%    0     0.0KB/s   --:-- ETA
  /tmp/test.zip                                 100%  153     0.2KB/s   00:00 Output of zip command from Computer One: Fetching /tmp/test.zip to test.zip
  /tmp/test.zip                                 100%  153     0.2KB/s   00:00
