@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 b7f6d63f50d119959acac471f7fd9e78ff331990 ChangeLog
+SHA1 486669951200ae8c5bade0eff1183da22e3dda4a ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,9 +92,9 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 e67dd9490dd30cb379a9b08d177097231c93d819 META.yml
-SHA1 038451eb17569db921afbecf48c257d41a105be4 Makefile.PL
-SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
+SHA1 f1fcf9d0fa5b28249461ee90d2849a6f8f7664d4 META.yml
+SHA1 71ea7be498b4145216af8e861122804b09bbbe79 Makefile.PL
+SHA1 e64a91525f8949658856accaab34e30981856479 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
 SHA1 967864161cdddec872e6ea5fc18c37776cb1641a bin/install_mozrepl_plugin.exe
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 a98899c3c5a0f7c758e0f5fc3e839ff0ae4c7dc0 lib/Net/FullAuto.pm
+SHA1 ca905169ea95c0e222b8394bb15968f45b648121 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 bde47d7e159545b9a32c518527e122b5c5231901 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 c6096414c9970ce64beb619cc9f0d78fe4d69993 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 5a94aba0c24ff70a9a8063a78fce86373be82e5d lib/Net/FullAuto/FA_Core.pm
+SHA1 8710c62867911d5f7da83e54e90ad22a35406165 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUB1FxAAoJEBa/9Pad787EBWQH/0NrOWqKVVwx0BLjGebyc2De
-jp6KFPlmfemgn7TZNlrkcQnuaYmLvxjriEaM8XVDv7LylMCgp/WqkZvnTZmUXz5i
-ssruMMMzioW4TeJnNmPuYtuExym83kZwO+KMYATxbmgkR3POXxFVAVi8iBpc3D9+
-VfX8tRd7gAcSkd5sp8VNn0mwwIu+Xrnz3FLqs2QnCcZTl7BjPURLqf0BhIPsmD20
-HOYhtK+5AM/uss6dYnghBNd36mop89vEiQ8JR1lpc2pn1BdcNUK+P2aFviYJ5XVU
-v2nwli0TyLTc6grqOQHW/e0Ip5R8D4ICjC37SpiUfqxYp85X5fnzNehQXFUCQC8=
-=/v4H
+iQEcBAEBAgAGBQJUCiGCAAoJEBa/9Pad787EhtwH/2w1jiweJrkW0HXQcwOxWBC1
+fxDB9YzH19qyAuKZ9JDHz2GIONiEhnJvfIxfWH43QQLOllTypUVs0Fi5f4Ti1B6O
+ifPAUvhCd1It/8fP0+wU3+cnDqXzaT4vyvcaKL8kmUNDpnnc4wig9EMKZAIfl8Ds
+eeM7PymBZdH0EY2KG26HIVHtnQlk49y5RbXyv/1wvVWERGLGVoVGgG6DW4Xyx8kF
+Cxa04UgMh9WyY3s+LzbVWtVSfFLLILoTFo7bPdUmf1Z3dr3Mo5a/cMfB9h7m5YQh
+fTAHu2Vb5CAiRWkzqD8TCuEsRLVmDtofp2mLDx3v5uQZf+8mSceiJHK/DUpvPQE=
+=5nKF
 -----END PGP SIGNATURE-----
