@@ -20,6 +20,13 @@
 #######################################################################
 
 
+2014-09-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.999999999904 released.
+
+        * Added $returncode to output options
+
+
 2014-09-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.999999999903 released.
